--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.30.2",
     "sass": "^1.79.3",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   }
